@@ -59,9 +59,15 @@ module ElasticAPM
     end
 
     def path_ignored?(env)
-      config.ignore_url_patterns.any? do |r|
-        env['PATH_INFO'].match r
+      return true if config.ignore_url_patterns.any? do |r|
+        r.match(env['PATH_INFO'])
       end
+
+      return true if config.transaction_ignore_urls.any? do |r|
+        r.match(env['PATH_INFO'])
+      end
+
+      false
     end
 
     def start_transaction(env)
