@@ -35,6 +35,15 @@ endif::[]
 [[release-notes-3.x]]
 === Ruby Agent version 3.x
 
+[float]
+[[unreleased]]
+==== Unreleased
+
+[float]
+===== Added
+
+- Config option `transaction_ignore_urls` to replace `ignore_url_patterns` {pull}844[#844]
+
 [[release-notes-3.9.0]]
 ==== 3.9.0 (2020-08-04)
 
